# radicle-client-services

./: .env  .env.maple  .env.pine  .env.seed  .env.willow  .gitignore  Caddyfile  Cargo.toml  DESIGN.md  LOCAL.md  README.md  build.rs  docker-compose.gcp.yml  docker-compose.p2p.yml  docker-compose.seed.yml  docker-compose.yml  shell.nix
e2e-tests/: README.md  issue782.py  pyproject.toml
e2e-tests/input/bootstrap/: identity
e2e-tests/input/bootstrap/git/: config
e2e-tests/input/bootstrap/git/logs/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/refs/rad/: id
e2e-tests/input/bootstrap/git/logs/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/rad/: id
e2e-tests/input/bootstrap/git/logs/refs/namespaces/hnrkqdpm9ub19oc8dccx44echy76hzfsezyio/refs/rad/: id
e2e-tests/input/bootstrap/git/logs/refs/namespaces/hnrkyjensx1s6ijuiutomqzwsjauszd9ysqyy/refs/rad/: id
e2e-tests/input/bootstrap/git/objects/pack/: pack-2c7aa9dde20ac67d9ac0f3e62ea3c2e075c31af6.idx  pack-2c7aa9dde20ac67d9ac0f3e62ea3c2e075c31af6.pack  pack-41964208d332f1e2962fa0bda9dde9e353812c23.idx  pack-41964208d332f1e2962fa0bda9dde9e353812c23.pack  pack-5a98739e42c16982c51cce34707ec9450c97c38d.idx  pack-5a98739e42c16982c51cce34707ec9450c97c38d.pack  pack-72aaa46156d2d8cd496145cfc690ac95fb60c87e.idx  pack-72aaa46156d2d8cd496145cfc690ac95fb60c87e.pack  pack-7f4995feb5b1934ac727675d06c57b698d518abd.idx  pack-7f4995feb5b1934ac727675d06c57b698d518abd.pack  pack-9ee998e831670eba68341cc57139f5bdd2d91512.idx  pack-9ee998e831670eba68341cc57139f5bdd2d91512.pack  pack-ce1f81eab645102e2d62772074956940d19f39c8.idx  pack-ce1f81eab645102e2d62772074956940d19f39c8.pack  pack-f52e9eebc1a58a1d716ad75884d0991dd749811f.idx  pack-f52e9eebc1a58a1d716ad75884d0991dd749811f.pack  pack-f693705abaf390a98daa01e1baf91ef2c167b759.idx  pack-f693705abaf390a98daa01e1baf91ef2c167b759.pack  pack-fd8f0b5064b8722612d7e84f813ea3262184be08.idx  pack-fd8f0b5064b8722612d7e84f813ea3262184be08.pack
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/: HEAD
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/refs/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/refs/remotes/hyn9diwfnytahjq8u3iw63h9jte1ydcatxax3saymwdxqu1zo645pe/heads/: master
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/refs/remotes/hyn9diwfnytahjq8u3iw63h9jte1ydcatxax3saymwdxqu1zo645pe/rad/: id  signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkbtw9t1of4ykjy6er4qqwxtc54k9943eto/refs/remotes/hyyqpngdoe4x4oto3emfdppbw7sj1pfaghbpmmhz5rqiuqg8uofmeo/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/: HEAD
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/heads/: master
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hybz9gfgtd9d4pd14a6r66j5hz6f77fed4jdu7pana4fxaxbt369kg/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hyd4ge6w1ig37cjg31zzi5kdgd91xtwezkzx91ypzwnh4dn4m5qm7h/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hyd7cb39wws6jz5wmifzwtjn8u57siw6knipqttk6nhc657r1fozaw/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hydgnjorosxetwr3xrqsfazuornz7m8wrx7brdyk5nxc4j9j9jhjxg/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hyn9diwfnytahjq8u3iw63h9jte1ydcatxax3saymwdxqu1zo645pe/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hynkyndc6w3p8urucakobzna7sxwgcqny7xxtw88dtx3pkf7m3nrzc/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hynpd6jij8ifug9zkxojj9q5k9mcfxu1pak1t71qbc3b1od1yrmp7h/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hynqybwjzwzfcrydm1iar535qog77fst8jyk8w3yny9nz6d94cwq81/rad/: signed_refs
e2e-tests/input/bootstrap/git/refs/namespaces/hnrkjajuucc6zp5eknt3s9xykqsrus44cjimy/refs/remotes/hyy4ebh8amk3ypyawgpjnfpbgkxqwdo5n1iif5s17yghwmewrf4d8a/rad/: signed_refs
e2e-tests/input/replicator/: identity
git-server/: Cargo.toml  Dockerfile  README.md  start-up.sh
git-server/docker/: radicle-git-server.sh  start-up.sh
git-server/src/: error.rs  lib.rs  main.rs
git-server/src/hooks/: mod.rs  post_receive.rs  pre_receive.rs  storage.rs  types.rs
http-api/: Cargo.toml  Dockerfile
http-api/docs/: README.md
http-api/docs/browser/: blob.md  readme.md  tree.md
http-api/docs/commits/: commit.md  history.md
http-api/docs/info/: get.md
http-api/docs/patches/: list.md
http-api/docs/peer/: get.md
http-api/docs/projects/: get.md  list.md
http-api/docs/sessions/: create.md  get.md  update.md
http-api/src/: auth.rs  axum.rs  axum_extra.rs  commit.rs  custom_axum.rs  error.rs  identity.rs  issues.rs  lib.rs  main.rs  patch.rs  patches.rs  project.rs  test_extra.rs  v1.rs
http-api/src/v1/: delegates.rs  peer.rs  projects.rs  sessions.rs  stats.rs
indexer-node/: Cargo.toml
indexer-node/src/: db.rs  error.rs  git.rs  lib.rs  main.rs
influxdb/: 00-init.sh  template.yaml
linkd/: Dockerfile
node/: Cargo.toml
org-node/: Cargo.toml  Dockerfile  README.md
org-node/src/: client.rs  error.rs  identity.rs  lib.rs  main.rs  observability.rs  query.rs  store.rs  webserver.rs
org-node/src/client/: handle.rs  signer.rs  webserver.rs
org-node/src/graphql/: AllAnchors.gql  AllProjects.gql  OrgAnchors.gql  OrgProjects.gql
org-node/src/tests/: mod.rs  websocket.rs
scripts/: post-receive-ok  (+1 more)
shared/: Cargo.toml
shared/src/: identity.rs  keys.rs  lib.rs  logging.rs  signer.rs
(+31 files in other folders)
