[workspace]
members = [
  "http-api",
  "git-server",
  "shared",
]

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.lnk-clib]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.lnk-identities]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.git-trailers]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.git-ref-format]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-06-21"

[patch.crates-io.radicle-common]
git = "https://github.com/radicle-dev/radicle-cli"
rev = "2d362afef6c1b74610d61e34bd0c9a314d542b5a"

[patch.crates-io.automerge]
git = "https://github.com/automerge/automerge-rs"
rev = "291557a019acac283e54ea31a9fad81ed65736ab"

[profile.release]
debug = true

[profile.container]
inherits = "release"
incremental = false
