[workspace]
members = [
  "http-api",
  "git-server",
  "node",
  "shared",
]

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-clib]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-identities]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-sync]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.git-trailers]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.git-ref-format]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.link-async]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.link-replication]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.radicle-common]
git = "https://github.com/radicle-dev/radicle-cli"
rev = "ea07d1c1327fd05e7792b771436744d415bf4fd9"

[patch.crates-io.automerge]
git = "https://github.com/automerge/automerge-rs"
rev = "291557a019acac283e54ea31a9fad81ed65736ab"

[patch.crates-io.nakamoto-net]
git = "https://github.com/cloudhead/nakamoto"
branch = "master"
version = "0.3.0"

[patch.crates-io.nakamoto-net-poll]
git = "https://github.com/cloudhead/nakamoto"
branch = "master"
version = "0.3.0"

[profile.release]
debug = true

[profile.container]
inherits = "release"
incremental = false
