[tool.poetry]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = ["Adam Szkoda <adaszko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio = "^0.19.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
