[package]
name = "radicle-git-server"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
shared = { path = "../shared", default-features = false }
warp = { version = "0.3.1", features = ["tls"] }
http = { version = "0.2" }
thiserror = { version = "1" }
tokio = { version = "1.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }
argh = { version = "0.1.4" }
tracing = "0.1"
tracing-subscriber = "0.2"

[features]
gcp = ["shared/gcp"]
