[package]
name = "radicle-git-server"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
build = "../build.rs"
default-run = "radicle-git-server"

[[bin]]
name = "pre-receive"
path = "bin/pre_receive.rs"
required-features = ["hooks"]

[[bin]]
name = "post-receive"
path = "bin/post_receive.rs"
required-features = ["hooks"]

[dependencies]
argh = { version = "0.1.4" }
base64 = { version = "0.13" }
byteorder = { version = "1.4" }
either = { version = "1.6" }
flate2 = { version = "1.0" }
fastrand = { version = "1.5" }
git2 = { version = "0.13" }
http = { version = "0.2" }
librad = { version = "0" }
shared = { path = "../shared", default-features = false }
sha2 = { version = "0.9" }
thiserror = { version = "1" }
tokio = { version = "1.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.3.1", features = ["tls"] }
radicle-source = { version = "0.2.0" }

# hooks feature enabled dependencies
envconfig = { version = "0.10.0", optional = true }
hex = { version = "0.4.3", optional = true }

[features]
default = ["hooks"]
gcp = ["shared/gcp"]
hooks = ["envconfig", "hex"]

