[package]
name = "radicle-http-api"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
warp = { version = "0.3.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = { version = "0.7.0" }
radicle-source = { version = "0.2.0", features = ["syntax"] }
radicle-daemon = { version = "0.1.0", git = "https://github.com/radicle-dev/radicle-link", branch = "master" }
radicle-keystore = { version = "0.1.1" }
thiserror = { version = "1" }
git2 = { version = "0.13", default-features = false, features = [] }
tokio = { version = "1.2", features = ["macros", "rt", "sync"] }
argh = { version = "0.1.4" }
either = { version = "1.6" }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1"
