[package]
name = "radicle-http-api"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
build = "../build.rs"

[dependencies]
anyhow = "1"
deadpool = "0.7.0"
librad = { version = "0.1" }
lnk-identities = { version = "0" }
shared = { path = "../shared", default-features = false }
#warp = { version = "0.3.1", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7.0" }
radicle-source = { version = "0.3.0", features = ["syntax"] }
radicle-surf = { version = "0.7.0", features = ["serialize"] }
radicle-common = { version = "0.1.0", features = ["ethereum"] }
siwe = "0.2"
thiserror = { version = "1" }
git2 = { version = "0.13", default-features = false, features = [] }
tokio = { version = "1.2", features = ["macros", "rt", "sync"] }
argh = { version = "0.1.4" }
either = { version = "1.6" }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1"
ethers-core = "0.6.3"
fastrand = "1.7.0"
chrono = { version = "0.4.19", features = ["serde"] }
axum = { version = "0.5.3", features = [ "headers" ] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
hyper = { version ="0.14.17", features = ["server"] }
tower-http = { version = "0.3.0", features = ["trace", "cors"] }

[features]
gcp = ["shared/gcp"]
