[package]
name = "radicle-org-node"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
build = "../build.rs"

[dependencies]
shared = { path = "../shared", default-features = false }
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
git2 = { version = "0.13", default-features = false }
radicle-daemon = { version = "0.1" }
librad = { version = "0" }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }
futures = { version = "0.3" }
thiserror = { version = "1" }
argh = { version = "0.1.4" }
either = { version = "1.6" }
tracing = "0.1"
tracing-subscriber = "0.2"
ureq = { version = "2.1.1", features = ["json"] }
ethers = { version = "0.4" }
rustc-hex = { version = "2.1" }
anyhow = "1.0"
outflux = { git = "https://github.com/radicle-dev/outflux", optional = true }
warp = "0.3.2"
futures-util = "0.3.17"

[features]
gcp = ["shared/gcp"]
influxdb-metrics = ["outflux"]
