[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.53"
base64 = "0.13"
byteorder = "1.4"
librad = "0"
sha2 = { version = "0.10.2" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-stackdriver = { git = "https://github.com/radicle-dev/tracing-stackdriver.git", optional = true }

[features]
default = []
gcp = ["tracing-stackdriver"]
